--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "react-slick": "^0.30.2",
+    "react-top-loading-bar": "^2.3.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
